--- a/style.css
+++ b/style.css
@@ -24,10 +24,14 @@ body {
 }
 
 .container {
-  display: flex;
+  display: none;
   flex-direction: column;
   max-width: 320px;
   gap: var(--gap);
+}
+
+.container__active {
+  display: flex;
 }
 
 .controls {
